fix(ui); remove right gap of main element

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -13,13 +13,13 @@
 body {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 9fr;
+  grid-template-rows: 10vh 90vh;
   margin: 0;
   padding: 0;
   background-color: blue;
 }
 nav {
-  max-width: 60%;
+  width: 60%;
   background-color: lightgreen;
   margin: 0 auto;
   text-align: center;
@@ -38,8 +38,8 @@ nav {
 }
 
 .main-action-buttons > button {
-  font-size: 1.5rem;
-  padding: 0.3em 1em;
+  font-size: 1.7rem;
+  padding: 0.2em 1em;
   border: none;
   border-radius: 10px;
   box-shadow: 2px 2px 2px rgb(0 0 0 / 0.3);
@@ -47,8 +47,8 @@ nav {
 }
 
 main {
-  max-width: 99%;
+  max-width: 100%;
   background-color: wheat;
-  margin: 0;
-  margin-right: -1em;
+  margin: 0 1em 1em;
+  border-radius: 15px;
 }
